# POP-3

./: .gitignore  Protocol.txt  README.md  envs.sh  lazy.sh  out  protos-cmds  sctp-hexdump  sctp_tester.sh
client/src/: CMakeLists.txt  Makefile  Project.cbp  client.c  common.h  handler.c  handler.h  makefile
diagramas/smcat/: request_parser_ne.smcat  request_parser_we.smcat
informe/: informe.txt  informe.xml  readme.txt  rfc2629.dtd
server/src/: CMakeLists.txt  Makefile  main.c
server/src/pop3Parsers/: pop3request.c  pop3request.h  pop3response.c  pop3response.h  pop3responseDescaping.c  pop3responseDescaping.h  pop3responseEscaping.c  pop3responseEscaping.h
server/src/proxy/: ServerSpcpNio.c  ServerSpcpNio.h  proxyPop3nio.c  proxyPop3nio.h  spcpServerCredentials.h
server/src/spcpParsers/: spcpRequest.c  spcpRequest.h
server/src/utils/: buffer.c  buffer.h  metrics.h  parser_utils.h  proxyArguments.c  proxyArguments.h  request_queue.h  selector.c
src/: CMakeLists.txt  main.c  proxyPop3nio.c  request.h  selector.c
src/client/: client.c  common.h  handler.c  handler.h
src/pop3Parsers/: pop3request.c  pop3request.h  pop3response.h
src/proxy/: ServerSpcpNio.c  proxyPop3nio.c  proxyPop3nio.h  shared.h  spcpServerCredentials.c  spcpServerCredentials.h
src/spcpParsers/: spcpRequest.c  spcpRequest.h
src/tests/: requestTest.c  requestTest.h
src/utils/: proxyArguments.c  proxyArguments.h  request.c  request.h  request_queue.c  request_queue.h  response.c  response.h  selector.h
stripmime/: CMakeLists.txt  TODO  gdb.txt  i_big.head  i_big.tail  iii_images_fwd.mbox  mail0  mail1  mail1.txt  mail1strip  mailstrip  makefile  mime_body.c  mime_body.h  mime_boundary_border_end.c  mime_boundary_border_end.h  mime_boundary_key.c  mime_boundary_key.h  mime_chars.c  mime_chars.h  mime_ctransfer_value.c  mime_ctransfer_value.h  mime_msg.c  mime_msg.dot  mime_msg.h  mime_msg_test.c  mime_value.c  mime_value.h  parser.c  parser.h  parser_utils.c  parser_utils.h  pop3_multi.c  pop3_multi.dot  pop3_multi.h  stripmime  stripmime.c  stripmime.dot
